2008-08-18  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes part of bug #508732

	* e-shell.c:
	Add a "crash_recovery" flag, with accessor functions for it.

	* e-shell-window (init_view):
	Check and reset the "crash_recovery" flag before creating a
	new shell view.  The components can use this flag to take
	steps to recover from the previous crash.

	* apps_evolution_shell.schemas.in:
	Remove the "skip_recovery_dialog" and "recovery" keys.

	* Evolution-Component.idl (createView):
	Add a "select_item" boolean parameter.

	* main.c:
	Kill the crash recovery dialog.  Instead just set the crash
	recovery flag in e-shell appropriately.

2008-08-18  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #416258

	* e-user-creatable-items-handler.c (ensure_menu_items),
	(free_menu_items), (new_button_change), (setup_toolbar_button):
	Added icon_toolbar for default items which is used instead of menu icon.

2008-08-08  Matthew Barnes  <mbarnes@redhat.com>

	* e-shell-importer.c:
	Remove unused EShell pointer from ImportData.

2008-08-07  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes bug #467115

	* e-component-registry.h:
	Replace button and menu icon pixbufs with an icon name string.

	* e-component-registry.c (query_components):
	No need to create pixbufs, just save the icon name.

	* e-sidebar.c:
	Remember a default icon name rather than a default pixbuf.

	* e-sidebar.c (e_sidebar_add_button), (e_sidebar_change_button_icon):
	* e-shell-window.c (e_shell_window_change_component_button_icon):
	Take an icon name instead of a pixbuf.

	* e-shell-window.c (switch_view):
	Call gtk_window_set_icon_name() instead of gtk_window_set_icon().

	* e-shell-window.c (setup_widgets):
	Change XML from pixtype="pixbuf" to pixbuf="filename" and derive
	an appropriate filename from the icon name.

2008-08-06  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #249844

	* test/evolution-test-component.c: (impl__get_userCreatableItems):
	Do not let compiler claim.
