@@ -73,11 +73,11 @@ impl_finalize (GObject *object)
 
 /* Evolution::Component CORBA methods */
 
-static CORBA_boolean
+static void
 impl_upgradeFromVersion (PortableServer_Servant servant,
-			 CORBA_short major,
-			 CORBA_short minor,
-			 CORBA_short revision,
+			 const CORBA_short major,
+			 const CORBA_short minor,
+			 const CORBA_short revision,
 			 CORBA_Environment *ev)
 {
 	EvolutionTestComponent *component = EVOLUTION_TEST_COMPONENT (bonobo_object_from_servant (servant));
@@ -86,8 +86,6 @@ impl_upgradeFromVersion (PortableServer_Servant servant,
 	priv = component->priv;
 
 	g_message ("Upgrading from %d.%d.%d", major, minor, revision);
-
-	return CORBA_TRUE;
 }
 
 
